# neural-network-applications

./: .gitignore  README.md  pyproject.toml
CIFAR-10/: README.md  main.py  resnet.py  utils.py
CNN/: README.md  cifar10.py  mnist.py
GNN/: README.md  citeseer.py  helpers.py  main.py
introduction/: README.md
introduction/cnns/: cnn.ipynb  utils.py
introduction/gans/: gan.ipynb  utils.py
introduction/gnns/: gnn.ipynb  utils.py
introduction/hand-digit-classification/: DNN.py  digit_classification.ipynb  main.ipynb
introduction/lstm/: lstm.ipynb  utils.py
introduction/theory/: perceptron.ipynb  two-layer-NN.ipynb
introduction/transformer/: transformer.ipynb  utils.py
neural-network/: NeuralNetwork.py  README.md  main.py  plots.py
