[project]
name = "neural-network-applications"
version = "0.1.0"
description = "Details and code for constructing learning algorithms through artificial neural networks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pytorch-lightning>=2.5.4",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "tensorboardx>=2.6.4",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "torchvision>=0.23.0",
]
